New: correlations for Listings

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protective-mayor",
+   "id": "adjusted-accent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "systematic-olympus",
+   "id": "regulated-parliament",
    "metadata": {
     "id": "TaQFCfhxjTk3"
    },
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minute-condition",
+   "id": "great-variation",
    "metadata": {
     "id": "deluxe-right"
    },
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acute-fields",
+   "id": "dense-testament",
    "metadata": {
     "id": "natural-walker"
    },
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secure-sending",
+   "id": "preliminary-honey",
    "metadata": {
     "id": "divine-accreditation"
    },
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "centered-broad",
+   "id": "classified-cloud",
    "metadata": {
     "id": "trained-reflection"
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-addiction",
+   "id": "entire-overview",
    "metadata": {
     "id": "yIW1KFCnjbmL"
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-candy",
+   "id": "united-madonna",
    "metadata": {
     "id": "scenic-shelter"
    },
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complicated-moderator",
+   "id": "north-clerk",
    "metadata": {
     "id": "single-party"
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-spring",
+   "id": "coastal-marketplace",
    "metadata": {
     "id": "median-kingdom"
    },
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sensitive-controversy",
+   "id": "rural-transition",
    "metadata": {
     "id": "disturbed-directive"
    },
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-reaction",
+   "id": "relevant-georgia",
    "metadata": {
     "id": "aggressive-logistics"
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-latter",
+   "id": "manual-grant",
    "metadata": {
     "id": "eC7g1_87kgK8"
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parliamentary-finding",
+   "id": "sacred-cannon",
    "metadata": {},
    "source": [
     "### Where are the listings situated?"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "regulation-siemens",
+   "id": "pursuant-listing",
    "metadata": {
     "run_control": {
      "marked": true
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supported-banking",
+   "id": "essential-storage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wooden-party",
+   "id": "empirical-calendar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-diversity",
+   "id": "varying-blank",
    "metadata": {
     "id": "aquatic-rubber"
    },
@@ -331,7 +331,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proved-roberts",
+   "id": "bulgarian-woman",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.heatmap(listings[[\n",
+    "       'host_response_time', 'host_response_rate', 'host_acceptance_rate',\n",
+    "       'host_is_superhost',\n",
+    "       'host_neighbourhood', 'host_listings_count','host_verifications',\n",
+    "       'host_has_profile_pic', 'host_identity_verified',\n",
+    "       'neighbourhood_cleansed', 'neighbourhood_group_cleansed','room_type', 'accommodates',\n",
+    "       'bedrooms', 'beds', 'price',\n",
+    "       'minimum_nights', 'maximum_nights', 'has_availability',\n",
+    "       'availability_30', 'number_of_reviews',\n",
+    "       'last_review','instant_bookable',\n",
+    "       'region', 'amenities_count', 'type', 'days_host']].corr())\n",
+    "\n",
+    "plt.suptitle('Correlation matrix')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('../assets/figures/listings-correlation.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "modular-divorce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.heatmap(listings[[\n",
+    "       'review_scores_rating', 'review_scores_accuracy',\n",
+    "       'review_scores_cleanliness', 'review_scores_checkin',\n",
+    "       'review_scores_communication', 'review_scores_location',\n",
+    "       'review_scores_value']].corr())\n",
+    "\n",
+    "plt.suptitle('Correlation matrix')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('../assets/figures/listings-review-correlation.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mental-reproduction",
    "metadata": {
     "id": "intermediate-grain"
    },
@@ -352,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graduate-protest",
+   "id": "devoted-programming",
    "metadata": {
     "id": "combined-winter"
    },
@@ -363,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "egyptian-economy",
+   "id": "binary-boards",
    "metadata": {
     "id": "integrated-collins"
    },
@@ -379,6 +421,7 @@
     "ax[1].get_legend().remove()\n",
     "\n",
     "fig.suptitle('Frequency of property type in Swiss listings')\n",
+    "ax[0].set_ylabel('Frequency')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('../assets/figures/listings-type.png')\n",
@@ -387,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "increasing-suggestion",
+   "id": "understanding-killer",
    "metadata": {
     "id": "adaptive-sender"
    },
@@ -398,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liberal-colors",
+   "id": "gross-elizabeth",
    "metadata": {
     "id": "exposed-shame"
    },
@@ -421,6 +464,8 @@
     "ax[0].get_legend().remove()\n",
     "ax[1].get_legend().remove()\n",
     "\n",
+    "fig.suptitle('Price distribution in function of beds and property type')\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.savefig('../assets/figures/listings-price-dist.png')\n",
     "plt.show()"
@@ -428,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "norman-authority",
+   "id": "cathedral-monroe",
    "metadata": {},
    "source": [
     "### What do the distributions of the different review categories look like?"
@@ -437,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naked-revelation",
+   "id": "extra-contribution",
    "metadata": {
     "id": "promising-ecology"
    },
@@ -471,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "canadian-glossary",
+   "id": "varied-romance",
    "metadata": {},
    "source": [
     "### WordCloud of listing description per city"
@@ -480,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "international-stack",
+   "id": "suspected-yorkshire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "timely-patch",
+   "id": "alone-eight",
    "metadata": {},
    "source": [
     "### Parse the amenities into a plottable format"
@@ -522,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advanced-envelope",
+   "id": "legislative-burke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "random-valve",
+   "id": "dependent-strap",
    "metadata": {},
    "source": [
     "This takes quite a while"
@@ -545,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sized-tuning",
+   "id": "developed-startup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applied-explanation",
+   "id": "horizontal-bottle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attached-syndicate",
+   "id": "meaning-massachusetts",
    "metadata": {
     "id": "BykrnWozjhWY"
    },
@@ -606,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ordered-portland",
+   "id": "primary-albany",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aerial-camcorder",
+   "id": "turned-governor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "measured-civilization",
+   "id": "intimate-mixer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "casual-enforcement",
+   "id": "fossil-range",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "metropolitan-plastic",
+   "id": "varying-newsletter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reverse-personality",
+   "id": "increased-principle",
    "metadata": {},
    "source": [
     "### How does the general trend of Reviews compare over a period of time?"
@@ -678,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intense-plasma",
+   "id": "advanced-fluid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "central-mechanism",
+   "id": "hearing-trustee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-screening",
+   "id": "bored-lawyer",
    "metadata": {},
    "source": [
     "### Within the top 5 most reviewed listings, how do they temporally compare ?"
@@ -706,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beneficial-festival",
+   "id": "authorized-defense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informed-olive",
+   "id": "enabling-screen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "graphic-devil",
+   "id": "lesbian-dairy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pediatric-lafayette",
+   "id": "coupled-richardson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funny-ireland",
+   "id": "noticed-review",
    "metadata": {
     "id": "97zhqbYajjKI"
    },
@@ -772,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tested-amount",
+   "id": "plastic-field",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entire-mixture",
+   "id": "medical-combining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "buried-preservation",
+   "id": "behavioral-location",
    "metadata": {
     "id": "K9M8xI54jkWp"
    },
@@ -836,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "damaged-cross",
+   "id": "convertible-foundation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-dairy",
+   "id": "organizational-disposition",
    "metadata": {},
    "source": [
     "### Mean price:"
@@ -854,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immediate-rochester",
+   "id": "republican-authentication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certified-matrix",
+   "id": "fifty-independence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "czech-keeping",
+   "id": "weekly-panama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sacred-pierre",
+   "id": "cooperative-technique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "julian-chicken",
+   "id": "official-portsmouth",
    "metadata": {},
    "source": [
     "### Price categories: "
@@ -927,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minus-sustainability",
+   "id": "vital-tobago",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certain-carolina",
+   "id": "disciplinary-vanilla",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-bonus",
+   "id": "hawaiian-england",
    "metadata": {},
    "source": [
     "### Price predictions over time for one listing:"
@@ -973,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noticed-lottery",
+   "id": "signal-mexican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heated-operation",
+   "id": "educational-murder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dense-powder",
+   "id": "appropriate-communist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "short-honor",
+   "id": "descending-thanksgiving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "phantom-stable",
+   "id": "hydraulic-simple",
    "metadata": {},
    "outputs": [],
    "source": []
