--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -618,7 +618,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews = pd.read_csv('../data/vaud/reviews.csv')"
+    "reviews = pd.read_csv('../data/vaud/reviews.csv')\n",
+    "reviews_gv = pd.read_csv('../data/geneva/reviews.csv')\n",
+    "reviews_zh = pd.read_csv('../data/zurich/reviews.csv')"
    ]
   },
   {
@@ -627,7 +629,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews['date'] = pd.to_datetime(reviews['date'], format='%Y-%m-%d')"
+    "reviews['date'] = pd.to_datetime(reviews['date'], format='%Y-%m-%d')\n",
+    "reviews_gv['date'] = pd.to_datetime(reviews_gv['date'], format='%Y-%m-%d')\n",
+    "reviews_zh['date'] = pd.to_datetime(reviews_zh['date'], format='%Y-%m-%d')"
    ]
   },
   {
@@ -636,8 +640,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews.sample(10)"
+    "reviews['region'] = 'vaud'\n",
+    "reviews_gv['region'] = 'geneva'\n",
+    "reviews_zh['region'] = 'zurich'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -659,16 +672,16 @@
     "def plot_timeperiod_reviews(start_date=\"2018-01\",\n",
     "                            end_date=\"2021-01\",\n",
     "                            n=1,\n",
-    "                            data=reviews):\n",
+    "                            data=reviews, ax=None):\n",
     "    \"\"\"plot the n average count reviews over the timeperiod\"\"\"\n",
     "    data = data.set_index('date')\n",
-    "    data_to_plot = data[data['listing_id'].isin(find_top_reviews(n))].groupby(\n",
+    "    data_to_plot = data[data['listing_id'].isin(find_top_reviews(n, data))].groupby(\n",
     "        pd.Grouper(freq='M')).count()\n",
     "    data_to_plot = data_to_plot.fillna(0)\n",
     "\n",
-    "    title_ = \"Number of Reviews for the top %s Listings\" % n\n",
+    "    title_ = data['region'][0]\n",
     "    data_to_plot[start_date:end_date].plot(title=title_,\n",
-    "                                           ylabel=\"number of reviews\")"
+    "                                           ylabel=\"# of reviews\", ax=ax)"
    ]
   },
   {
@@ -684,7 +697,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_timeperiod_reviews(start_date=\"2015-01\", end_date='2021-01', n=40)"
+    "plot_timeperiod_reviews(start_date=\"2018-01\", end_date='2021-01', n=40, data=reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(3)\n",
+    "n_=10\n",
+    "fig.suptitle(\"Number of Reviews for the top %s Listings\" % n_)\n",
+    "plot_timeperiod_reviews(start_date=\"2017-01\", end_date='2021-01', n=n_, data=reviews, ax=axs[0])\n",
+    "plot_timeperiod_reviews(start_date=\"2017-01\", end_date='2021-01', n=n_, data=reviews_gv, ax=axs[1])\n",
+    "plot_timeperiod_reviews(start_date=\"2017-01\", end_date='2021-01', n=n_, data=reviews_zh, ax=axs[2])\n",
+    "axs[0].get_legend().remove()\n",
+    "axs[1].get_legend().remove()\n",
+    "axs[2].get_legend().remove()\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "plt.savefig('reviews_top_10.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(3)\n",
+    "n_=10\n",
+    "fig.suptitle(\"Number of Reviews for the top %s Listings\" % n_)\n",
+    "plot_timeperiod_reviews(start_date=\"2020-01\", end_date='2021-01', n=n_, data=reviews, ax=axs[0])\n",
+    "plot_timeperiod_reviews(start_date=\"2020-01\", end_date='2021-01', n=n_, data=reviews_gv, ax=axs[1])\n",
+    "plot_timeperiod_reviews(start_date=\"2020-01\", end_date='2021-01', n=n_, data=reviews_zh, ax=axs[2])\n",
+    "axs[0].get_legend().remove()\n",
+    "axs[1].get_legend().remove()\n",
+    "axs[2].get_legend().remove()\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "plt.savefig('reviews_top_10_yearly.png')"
    ]
   },
   {
@@ -718,15 +771,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_n_individual_reviews(start_date=\"2018-01\", end_date=\"2021-01\", n=2 , data=reviews, smoothed=True):\n",
+    "def plot_n_individual_reviews(start_date=\"2018-01\", end_date=\"2021-01\", n=2 , data=reviews, smoothed=True,ax = None):\n",
     "    \"\"\"plots the top n individual reviews between the given time period\"\"\"\n",
     "    \n",
-    "    data= reviews.set_index('date')\n",
+    "    data= data.set_index('date')\n",
     "    data['count'] = 1 #needed to count\n",
-    "    data_to_plot = data[data['listing_id'].isin(find_top_reviews(n))].groupby(['listing_id', pd.Grouper(freq='M')]).count()\n",
+    "    data_to_plot = data[data['listing_id'].isin(find_top_reviews(n,data))].groupby(['listing_id', pd.Grouper(freq='M')]).count()\n",
     "\n",
     "    pivoted_data = data_to_plot.pivot_table(index='date', columns='listing_id', values='count', fill_value=0)\n",
-    "    title_ = \"Number of Reviews of top %s Listings\" %n\n",
+    "    title_ =  data['region'][0]\n",
     "    \n",
     "    if smoothed:\n",
     "        for col in pivoted_data.columns.to_list():\n",
@@ -734,7 +787,7 @@
     "\n",
     "        pivoted_data[pivoted_data < 0]=0\n",
     "    \n",
-    "    pivoted_data.plot(title=title_, ylabel=\"number of reviews\")"
+    "    pivoted_data.plot(title=title_, ylabel=\"# reviews\", ax =ax)"
    ]
   },
   {
@@ -743,7 +796,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_n_individual_reviews(n=5)"
+    "fig, axs = plt.subplots(3)\n",
+    "\n",
+    "plot_n_individual_reviews(n=5,ax=axs[0])\n",
+    "plot_n_individual_reviews(n=5, data=reviews_gv, ax = axs[1])\n",
+    "plot_n_individual_reviews(n=5, data=reviews_zh, ax = axs[2])\n",
+    "axs[0].get_legend().remove()\n",
+    "axs[1].get_legend().remove()\n",
+    "axs[2].get_legend().remove()\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "plt.savefig('top5_reviews_long.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_n_individual_reviews(n=5, data=reviews_gv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_n_individual_reviews(n=5, data=reviews_zh)"
    ]
   },
   {
@@ -1354,7 +1435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
