--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1007,6 +1007,7 @@
     "             label='price Geneva')\n",
     "plt.gca().yaxis.set_major_formatter(PercentFormatter(0.01))\n",
     "ax.set_xlim([0, 1000])\n",
+    "ax.set_xlabel('Average price per night [$]')\n",
     "plt.title('Distribution of the average price for each listing in three locations')\n",
     "plt.legend()"
    ]
@@ -1435,7 +1436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
