figures updated for review

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -681,7 +681,12 @@
     "\n",
     "    title_ = data['region'][0]\n",
     "    data_to_plot[start_date:end_date].plot(title=title_,\n",
-    "                                           ylabel=\"# of reviews\", ax=ax)"
+    "                                           ylabel=\"# of reviews\", ax=ax)\n",
+    "    if(ax != None):\n",
+    "        ax.vlines(\"2020-03-13\", -5,120, linestyle=\"-.\")\n",
+    "        ax.vlines(\"2020-04-27\", -5,120, linestyle=\"-.\")\n",
+    "        ax.vlines(\"2020-06-25\", -5,120, linestyle=\"-.\")\n",
+    "        ax.vlines(\"2020-10-22\", -5,120, linestyle=\"-.\")"
    ]
   },
   {
@@ -727,11 +732,11 @@
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(3)\n",
-    "n_=10\n",
+    "n_=100\n",
     "fig.suptitle(\"Number of Reviews for the top %s Listings\" % n_)\n",
-    "plot_timeperiod_reviews(start_date=\"2020-01\", end_date='2021-01', n=n_, data=reviews, ax=axs[0])\n",
-    "plot_timeperiod_reviews(start_date=\"2020-01\", end_date='2021-01', n=n_, data=reviews_gv, ax=axs[1])\n",
-    "plot_timeperiod_reviews(start_date=\"2020-01\", end_date='2021-01', n=n_, data=reviews_zh, ax=axs[2])\n",
+    "plot_timeperiod_reviews(start_date=\"2019-01\", end_date='2020-01', n=n_, data=reviews, ax=axs[0])\n",
+    "plot_timeperiod_reviews(start_date=\"2019-01\", end_date='2020-01', n=n_, data=reviews_gv, ax=axs[1])\n",
+    "plot_timeperiod_reviews(start_date=\"2019-01\", end_date='2020-01', n=n_, data=reviews_zh, ax=axs[2])\n",
     "axs[0].get_legend().remove()\n",
     "axs[1].get_legend().remove()\n",
     "axs[2].get_legend().remove()\n",
