--- a/notebooks/brouillon_arnaud.ipynb
+++ b/notebooks/brouillon_arnaud.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "qualified-stake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intended-yahoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aging-symphony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +47,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporated-literacy",
    "metadata": {},
    "source": [
     "### Configuring Matplotlib styles"
@@ -59,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bound-jaguar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +72,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "harmful-migration",
    "metadata": {},
    "source": [
     "## Load listings data"
@@ -86,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beautiful-novelty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "retained-masters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "terminal-sarah",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reserved-technology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +123,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "embedded-syndicate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "commercial-hours",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scheduled-entertainment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "absolute-solution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bulgarian-merchant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amber-surveillance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-variety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +216,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-opening",
    "metadata": {},
    "source": [
     "## Load reviews data"
@@ -242,7 +224,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspended-cholesterol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confident-criticism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dirty-saint",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "union-grade",
    "metadata": {},
    "source": [
     "## Load calendar data\n"
@@ -280,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legal-pharmacology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "athletic-flavor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innocent-german",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regular-restaurant",
    "metadata": {},
    "source": [
     "## Load neighbourhood data"
@@ -318,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hairy-bosnia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +301,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-bicycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "possible-baker",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Datascience",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "datascience"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -360,7 +331,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
